# Ether-platform

./: .env.example  .env.frontend.example  .env.game-server.example  .env.server.example  .gitignore  CONTRIBUTING.md  README.md  eslint.config.mjs  import.ts  package.json  render.yaml
.gemini/: multiplayer-integration-guide.md  relay-todo.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  game.yaml
apps/backend/: Dockerfile  package.json
apps/backend-elysia/: package-lock.json  package.json
apps/backend-legacy/: package.json
apps/frontend/: extract_icon.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
apps/game-server/: package.json
apps/server/: package.json
apps/web/: package.json
docs/: ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.fr.md  CONTRIBUTING.md  GAME_DESIGN_NOTES.md  KANBAN.md  VEXT_GAME_INTEGRATION.md  antigravity.md  remaining_tasks.md
games/: README.md
games/aether_strike/: Cargo.toml  README.md  server_config.txt  vext.json
games/aether_strike/src/: assets.rs  class_system.rs  combat_system.rs  game.rs  main.rs  menu_system.rs  menu_ui.rs  network_api.rs  network_client.rs  network_handler.rs  network_protocol.rs  world_renderer.rs
games/aether_strike/src/entities/: enemy.rs  stick_figure.rs
games/aether_strike/src/modules/: enemy_model.rs  host_ai.rs  lobby_ui.rs  mod.rs  turn.rs
games/aether_strike/src/ui/: hud.rs
infra/docker/: docker-compose.app.yml  docker-compose.infra.yml
scripts/render/: ignore-build-backend.sh  (+1 more)
(+205 files in other folders)
